7.2-0 (07/29/2022)
-----
Support for the wpp2022 package.

New function get.countries.phase returns all countries and the phase they are in.

Function get.countries.table now also returns the ISO character codes if the new argument iso is set to TRUE.

Added argument est.uncertainty to write.projection.summary.

Bug fix in adjustments.

Bug fix for handling Phase I countries when using the uncertainty feature, including in "extra" countries.

Bug fix in missing the annual.simulation item in the meta object attached to prediction 
(thanks to Lucia Andreozzi).



7.1-1 (10/29/2021)
-----
Deprecated country.code and ISO.code arguments in various functions. Argument "country" is to be used instead.
This now requires import of some of the lifecycle functions. 

The "country" argument in many functions can now be also ISO-2 or ISO-3 characters.

Various bug fixes in the functionality for extra countries.

The "source" column is not required for the uncertainty feature. The column name can be passed 
in the "source.col.name" argument.

Argument "grouping" in tfr.estimation.plot is guessed automatically if there is no "source" column.

7.0-5 (09/16/2021)
-----
Fixed bug in tfr.get.dlcurves (thanks to Lucia Andreozzi).

Fixed bug in tfr.raftery.diag that prevented bayesLife diagnostics from working properly (thanks to Asmida Binti Mustafa).

In tfr.map.gvis, gvisGeoMap replaced with gvisGeoChart which is not based on Flash.

Added reference to the description file. 

7.0-4 (03/31/2021)
-----
Minor fixes of publication links.

7.0-3 (03/18/2021)
-----
Minor fixes needed for reverse dependencies.

7.0-2 (01/14/2021)
-----
Major update:
- added feature of assessing uncertainty abound the past (Liu & Raftery 2020)
- added feature of estimating and projecting for annual data

These changes affect the following functions:
- new arguments in run.tfr.mcmc: annual, ar.phase2, uncertainty, my.tfr.raw.file, 
                                    covariates, cont_covariates, iso.unbiased