@@ -1,5 +1,5 @@
 Package: bayesTFR
-Version: 7.1-1.9007
+Version: 7.1-1.9008
 Date: 2022-08-10
 Title: Bayesian Fertility Projection
 Author: Hana Sevcikova (hanas@uw.edu), Leontine Alkema (alkema@nus.edu.sg), Peiran Liu (prliu@uw.edu), Adrian Raftery (raftery@uw.edu), Bailey Fosdick (bfosdick@uw.edu), Patrick Gerland (gerland@un.org)
